--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *xcuserstate
+.DS_Store
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
