--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Anonymouse/CryptoSwift"]
 	path = Anonymouse/CryptoSwift
 	url = https://github.com/krzyzanowskim/CryptoSwift
+[submodule "CryptoSwift"]
+	path = CryptoSwift
+	url = https://github.com/krzyzanowskim/CryptoSwift.git
