--- a/Anonymouse/Podfile
+++ b/Anonymouse/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '9.0'
+platform :ios, '10.1'
 
 target 'Anonymouse' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
@@ -7,4 +7,5 @@ target 'Anonymouse' do
 
   # Pods for Anonymouse
   pod 'CryptoSwift', '0.6.9'
+  pod 'Alamofire', '4.5'
 end
