--- a/Anonymouse/Anonymouse/Info.plist
+++ b/Anonymouse/Anonymouse/Info.plist
@@ -28,7 +28,9 @@
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>external-accessory</string>
 		<string>fetch</string>
+		<string>newsstand-content</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
