--- a/Anonymouse/Anonymouse/Info.plist
+++ b/Anonymouse/Anonymouse/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>CoreBluetooth used to connect to nearby phones when receiving messages</string>
+	<key>NSLocationUsageDescription</key>
+	<string>CoreBluetooth used to connect to nearby phones when receiving messages</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>CoreBluetooth used to connect to nearby phones when receiving messages</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -33,6 +39,8 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
 		<string>fetch</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
