--- a/Anonymouse/Anonymouse/Info.plist
+++ b/Anonymouse/Anonymouse/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Used in order to broadcast messages to phones nearby</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>CoreBluetooth used to connect to nearby phones when receiving messages</string>
 	<key>NSLocationUsageDescription</key>
